--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-10-03  Sam <samkob(at)gmail.com>
+
+	* version 1.2.11
+	* little fix to allow %user% variable in mailer configuration (on behalf of R. Woolard)
+
+2009-07-24  Sam <samkob(at)gmail.com>
+
+	* version 1.2.10
+	* fixed non-working configuration of used module
+
 2005-11-06  Sam <samkob(at)gmail.com>
 
 	* version 1.2.9
